Revert "Fix aligning between the status bar and the info bar."
This reverts commit c9818a1a785972d751bcf9b4cc7e6c6b34036009.

--- a/assets/styles/firefly.css
+++ b/assets/styles/firefly.css
@@ -1,6 +1,6 @@
 .Filament-loader--firefly {
     position: absolute;
-    top: 32px;
+    top: 34px;
     left: 0;
     bottom: 0;
     right: 0;
